GNOME Bugzilla – Bug 679264
missing GObjectIntrospection tags in EvDocument
Last modified: 2012-07-02 16:25:12 UTC
function get_page_size is not correctly taged and get_page was not found in python using gi.repository.
Created attachment 217848 [details] [review] untestet patch with docstrings and GObjectIntrospection tags
Review of attachment 217848 [details] [review]: Fixed the issues mentioned and pushed to git master. Thanks! ::: libdocument/ev-document.c @@ +443,3 @@ + * @page_index: index of page + * + * Returns: (transfer: full): Newly created #EvPage for the given index. This should be (transfer full) @@ +598,3 @@ + * @document: a #EvDocument + * @page_index: index of page + * @width: (allow-none)(out): return location for the width of the page, or %NULL I'm not sure it's needed by I prefer to leave a space between annotations.
Thanks for the quick response!