libdocument: Add missing introspection annotations to ev_document_get_page and ev_document_get_page_size

https://bugzilla.gnome.org/show_bug.cgi?id=679264